# Proofling

./: .flake8  LICENSE  README.md  pyproject.toml  wholetest.py
.github/workflows/: python-package.yml
src/Proofling.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/proofling/: proof_blocks.py  proofling.py  syntax.txt
src/proofling/errors/: errors.py
src/proofling/proof_blocks/: proof_blocks.py
src/proofling/propositions/: propositions.py
tests/: proof1.txt  proof_simple.txt  run_tests.py  test_check.py  test_import.py  test_proofs.py
