[project]
name = "Proofling"
version = "0.0.1"
authors = [
  { name="Eric Buehler", email="ericlbuehler@gmail.com" },
]
description = "An automatic proof checker."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/EricLBuehler/Proofling"
"Bug Tracker" = "https://github.com/EricLBuehler/Proofling/issues"